<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:textAlignment="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:onClick="login"
        android:text="@string/login_button" />


</RelativeLayout>